clang/test/CIR/IR/invalid-opencl-kernel-arg-metadata.cir
// RUN: cir-opt %s -verify-diagnostics -split-input-file

// expected-error @below {{addr_space must be an integer array}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = ["none"],
  access_qual = ["none"],
  type = ["uint*"],
  base_type = ["uint*"],
  type_qual = [""]
>

// -----

// expected-error @below {{access_qual must be a string array}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [0 : i32],
  access_qual = [42 : i32],
  type = ["uint*"],
  base_type = ["uint*"],
  type_qual = [""]
>

// -----

// expected-error @below {{type must be a string array}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [0 : i32],
  access_qual = ["none"],
  type = [42 : i32],
  base_type = ["uint*"],
  type_qual = [""]
>

// -----

// expected-error @below {{base_type must be a string array}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [0 : i32],
  access_qual = ["none"],
  type = ["uint*"],
  base_type = [42 : i32],
  type_qual = [""]
>

// -----

// expected-error @below {{type_qual must be a string array}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [0 : i32],
  access_qual = ["none"],
  type = ["uint*"],
  base_type = ["uint*"],
  type_qual = [42 : i32]
>

// -----

// expected-error @below {{name must be a string array}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [0 : i32],
  access_qual = ["none"],
  type = ["uint*"],
  base_type = ["uint*"],
  type_qual = [""],
  name = [33 : i32]
>

// -----

// expected-error @below {{all arrays must have the same number of elements}}
#attr = #cir.cl.kernel_arg_metadata<
  addr_space = [0 : i32],
  access_qual = ["none"],
  type = ["uint*", "myunsignedint*"],
  base_type = ["uint*", "uint*"],
  type_qual = [""],
  name = ["foo"]
>
